@@ -5,7 +5,11 @@ TODO:
 - bird and netsnmp don't build with more than one job
 - deco
 
-revison 66:
+revision 68:
+- try different binutil download locations (stable, developer) for target toolchain
+revision 67:
+- fixed rebuilding of a kernel with different modules
+revision 66:
 - small fixes in download-toolchain.mk, kernel/Config.in and make/deco/Config.in
 revision 65:
 - worked on precompiled toolchain
